deploy/flask-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flask-server
  template:
    metadata:
      labels:
        app: flask-server
    spec:
      containers:
      - image: registry.hub.docker.com/mariadbashutoshkulkarni/test:latest
        name: flask-server
        ports:
        - containerPort: 80
