deploy/flask-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-server
spec:
  ports:
  - port: 5000
    targetPort: 5000
  type: LoadBalancer
  selector:
    app: flask-server
