deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-server
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: flask-server
