deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubera-ingress
  namespace: kubera4
spec:
  rules:
    - host: myinternaldomainname.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-server
                port:
                  number: 5000
